samples/_failures_safe/1761287698_57f2b8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5d96d2da.c: In function ‘main’:
./samples/SAFE/__tmp_5d96d2da.c:141:9: error: expected declaration or statement at end of input
  141 |         }
      |         ^
./samples/SAFE/__tmp_5d96d2da.c:141:9: error: expected declaration or statement at end of input
